update the way to draw page and update the fee page

--- a/templates/index/base.html
+++ b/templates/index/base.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="/static/css/reset.css">
     <link rel="stylesheet" href="/static/css/master.css">
     <title>{% block title %}期货の屋{% endblock %}</title>
+    {% block style %}
+    {% endblock %}
   </head>
   <body>
     <div class="container">
