--- a/templates/index/fee.html
+++ b/templates/index/fee.html
@@ -1,6 +1,6 @@
 {% extends 'index/base.html' %}
 {% block title %}
-    业务介绍 -- 期货の屋
+    费率一览 -- 期货の屋
 {% endblock %}
 {% block style %}
     <style>
@@ -14,7 +14,7 @@
 {% block main_left %}
     <div class="info_list list">
         <div class="list_title">
-            <span>业务信息</span>
+            <span>费率一览</span>
         </div>
 {#        <div class="main_out futures_account">#}
 {#            {% autoescape off %}#}
