--- a/static/css/master.css
+++ b/static/css/master.css
@@ -325,3 +325,22 @@ footer p{
 #aim_3:checked + label + #aim_4 + label + #other{
   display: block;
 }
+
+main .main_left .article_list .article_content .more_article{
+  font-size: 16px;
+  border-top: 2px solid #0e4ca1;
+  padding: 0 1%;
+}
+
+main .main_left .article_list .article_content .more_article .more_article_card{
+  margin-top: 3%;
+}
+
+main .main_left .article_list .article_content .more_article .more_article_card span{
+  display: inline-block;
+  max-width: 8em;
+}
+
+main .main_left .article_list .article_content .more_article .more_article_card a{
+  vertical-align: top;
+}
