--- a/templates/index2/about.html
+++ b/templates/index2/about.html
@@ -3,7 +3,7 @@
 {% block beforeMain %}
     <div class="bread">
         <a href="/">主页</a>
-        > <a href="/list?type=1">关于我们</a>
+        > <a href="/about">关于我们</a>
     </div>
     <div class="bm-title">
         <span>关于我们</span>
