--- a/templates/index2/article_list.html
+++ b/templates/index2/article_list.html
@@ -15,14 +15,18 @@
         <div class="list_left">
             <nav>
                 <ul>
-                    <li class="active"><a href="/search?keyword=">最新</a></li>
-                    <li><a href="/search?keyword=">股市</a></li>
-                    <li><a href="/search?keyword=">债市</a></li>
-                    <li><a href="/search?keyword=">商品</a></li>
-                    <li><a href="/search?keyword=">外汇</a></li>
-                    <li><a href="/search?keyword=">公司</a></li>
-                    <li><a href="/search?keyword=">经济</a></li>
-                    <li><a href="/search?keyword=">数据</a></li>
+                    {% if keyword == 0 %}
+                    <li class="active"><a href="/list?type={{ article_type }}&keyword=0">最新</a></li>
+                    {% else %}
+                    <li><a href="/list?type={{ article_type }}&keyword=0">最新</a></li>
+                    {% endif %}
+                    {% for kw in hot_key %}
+                        {% if kw.id == keyword %}
+                        <li class="active"><a href="/list?type={{ article_type }}&keyword={{ kw.id }}">{{ kw.name }}</a></li>
+                        {% else %}
+                        <li><a href="/list?type={{ article_type }}&keyword={{ kw.id }}">{{ kw.name }}</a></li>
+                        {% endif %}
+                    {% endfor %}
                 </ul>
             </nav>
             <div class="card_place">
@@ -52,19 +56,21 @@
                     {% endif %}
                 </ul>
                 <div class="page_jump">
+                    <input type="hidden" name="now_type" value="{{ article_type }}">
                     <span>跳转到</span>
-                    <input type="text">
+                    <input type="text" name="page">
                     <span>页</span>
-                    <button>确定</button>
+                    <button id="page_jump_icon">确定</button>
                 </div>
             </div>
         </div><div class="list_right">
             <div class="search">
                 <div class="search_place">
                     <input type="text" name="search" placeholder="输入关键词 按Enter搜索">
-                    <a href="/search"><div class="search_icon"></div></a>
+                    <a href="#" id="keyword_search"><div class="search_icon"></div></a>
                 </div>
             </div>
         </div>
     </div>
+    <script src="/static/js/jump.js"></script>
 {% endblock %}
