update the page

--- a/templates/index2/index.html
+++ b/templates/index2/index.html
@@ -44,7 +44,7 @@
           <div class="main_right">
             <div class="main_out guides">
               <ul>
-                {% for i in hl %}
+                {% for i in po %}
                 <li>
                   <a href="/article?id={{ i.id }}">
                     <span>{{ i.title }}</span>
