--- a/static/css/master.css
+++ b/static/css/master.css
@@ -379,7 +379,7 @@ main .page_place .pagination li{
 }
 
 .form_title{
-  padding: 0 0 0.7em 0;
+  padding: 0 0 0em 0;
   border-bottom: 1px solid #e6e3dc;
   line-height: 1.3em;
 }
@@ -435,4 +435,26 @@ main .page_place .pagination li{
 .form_item{
   padding: 2% 0;
   border-bottom: 1px solid #e6e3dc;
+}
+
+.outer_link{
+  padding: 0 5%;
+}
+
+.outer_link .outer_title{
+  font-size: 20px;
+  font-weight: 600;
+  padding-bottom: 0.5em;
+  border-bottom: 1px solid #e6e3dc;
+}
+
+.outer_link a{
+  display: block;
+  margin-top: 30px;
+  font-weight: 600;
+}
+
+.form_bottom{
+  padding-top: 1em;
+  line-height: 1.3em;
 }
