--- a/static/css/master.css
+++ b/static/css/master.css
@@ -1,10 +1,6 @@
 @font-face {
    font-family: "tiny-black";
-   src: url(../fonts/方正兰亭细黑_GBK_M.TTF);
-}
-@font-face {
-   font-family: "normal-black";
-   src: url(../fonts/方正兰亭细黑_GBK_M.TTF);
+   src: url(/static/fonts/方正兰亭黑.TTF);
 }
 html, body{
   width: 100%;
@@ -71,10 +67,11 @@ nav ul li a{
   font-size: 14px;
   padding: 0 1em 1em 1em;
   font-weight: 600;
+  color: #120504;
 }
 
 .list_left nav ul li a{
-  font-size: 12px;
+  font-size: 14px;
 }
 
 nav ul li a:hover{
@@ -86,7 +83,7 @@ nav ul .active a{
 }
 
 nav ul .active{
-  border-bottom: 2px solid #0e4ca1;
+  border-bottom: 3px solid #0e4ca1;
 }
 
 .detail, .bread, .bm-title{
@@ -103,7 +100,6 @@ nav ul .active{
 
 .bread{
   font-size: 14px;
-  font-family:"STHeiti";
   font-weight:600;
 }
 
@@ -126,7 +122,6 @@ nav ul .active{
 
 
 .detail_right p{
-  font-family: "STHeiti";
   text-indent: 4em;
   font-size: 13px;
   font-weight: 600;
@@ -141,12 +136,10 @@ main .main_out{
   font-size: 14px;
   font-weight: 500;
   padding-left: 20px;
-  font-family: "STHeiti";
   font-weight: 600;
 }
 
 main .main_out::before{
-  font-family: "normal-black";
   position: absolute;
   color: #0e4ca1;
   top: 0;
@@ -230,18 +223,15 @@ footer .copyright{
   margin-top: 30px;
 }
 .out_title{
-  font-family: "normal-black";
   font-size: 20px;
 }
 .out_content{
-  font-family: "Microsoft YaHei";
   padding-top: 10px;
   padding-bottom: 20px;
   font-size: 14px;
   color: #919191;
 }
 .out_footer{
-  font-family: "Microsoft YaHei";
   color: #C3C3C3;
 }
 
@@ -332,7 +322,6 @@ main .page_place .pagination li{
 .article_card .card_title{
   font-size: 24px;
   padding-bottom: 2%;
-  font-family: "STHeiti";
 }
 
 .article_card .card_info{
