--- a/static/css/master.css
+++ b/static/css/master.css
@@ -368,7 +368,7 @@ main .page_place .pagination li{
 }
 
 .form_title{
-  padding: 0 0 0em 0;
+  padding: 0 0 0 0;
   border-bottom: 1px solid #e6e3dc;
   line-height: 1.3em;
 }
@@ -376,12 +376,18 @@ main .page_place .pagination li{
 .form_item input[type="text"]:focus{
   border: none;
   outline: none;
-  border-bottom: 1px solid #0e4ca1;
 }
 
 .form_item input[type="text"]{
   border: none;
-  border-bottom: 1px solid #000;
+  font-size: 28px;
+  width: 46.2%;
+  background-color: #F8F8F8;
+}
+
+.form_item textarea{
+  border: none;
+  background-color: #F8F8F8;
 }
 
 .form_item input[type="radio"]{
@@ -417,8 +423,9 @@ main .page_place .pagination li{
 
 .form_item label:first-child{
   display: inline-block;
-  min-width: 150px;
+  min-width: 30%;
   font-weight: 600;
+  vertical-align: top;
 }
 
 .form_item{
