--- a/static/css/master.css
+++ b/static/css/master.css
@@ -94,12 +94,12 @@ nav ul .active{
 
 .bm-title{
   padding: 0.5em 0 0.2em 0;
-  font-size: 36px;
+  font-size: 28px;
   font-weight: 600;
 }
 
 .bread{
-  font-size: 14px;
+  font-size: 12px;
   font-weight:600;
 }
 
@@ -134,7 +134,6 @@ main .main_out{
   left: 10%;
   border-left: 8px solid #0e4ca1;
   font-size: 14px;
-  font-weight: 500;
   padding-left: 20px;
   font-weight: 600;
 }
@@ -380,8 +379,9 @@ main .page_place .pagination li{
 
 .form_item input[type="text"]{
   border: none;
-  font-size: 28px;
+  font-size: 14px;
   width: 46.2%;
+  height: 2em;
   background-color: #F8F8F8;
 }
 
@@ -426,6 +426,7 @@ main .page_place .pagination li{
   min-width: 30%;
   font-weight: 600;
   vertical-align: top;
+  font-size: 14px;
 }
 
 .form_item{
