--- a/templates/index2/join.html
+++ b/templates/index2/join.html
@@ -42,7 +42,7 @@
                     </div>
                     {% csrf_token %}
                     <div class="form_item">
-                        <button type="button" id="submit_button">点击提交</button>
+                        <button type="button" id="submit_button">点&nbsp;&nbsp;击&nbsp;&nbsp;提&nbsp;&nbsp;交</button>
                     </div>
                 </form>
                 <div class="form_bottom">
