--- a/templates/index2/join.html
+++ b/templates/index2/join.html
@@ -21,7 +21,7 @@
                 </div>
                 <form action="" method="post" id="join_form">
                     <div class="form_item">
-                        <label for="name">怎么称呼您？</label>
+                        <label for="name">怎么称呼您</label>
                         <input type="text" name="name" id="name">
                     </div>
                      <div class="form_item">
