--- a/templates/index2/base.html
+++ b/templates/index2/base.html
@@ -72,7 +72,7 @@
       <footer>
         <div class="footer_fixed">
           <div class="friend_link">
-            <p><span>友情链接：</span> <a href="#">迈科期货</a>|<a href="#">上海期货交易所</a>|<a href="#">大连期货交易所</a>|<a href="#">郑州期货交易所</a></p>
+            <p><span>友情链接：</span> <br><a href="#">迈科期货</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">上海期货交易所</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">大连期货交易所</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">郑州期货交易所</a></p>
           </div>
           <div class="copyright">
             <p>Copyright © 2018.XXX All rights reserved.</p>
