--- a/templates/index2/article_list.html
+++ b/templates/index2/article_list.html
@@ -37,7 +37,7 @@
                         {{ i.summary }}
                     </div>
                     <div class="out_footer">
-                        {{ i.author }}      {{ i.create_date| date:"Y/m/d"}}
+                        {{ i.author }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{ i.create_date| date:"Y/m/d"}}
                     </div>
                 </div>
                 {% endfor %}
