--- a/static/css/master.css
+++ b/static/css/master.css
@@ -25,7 +25,7 @@ a:hover{
   width: 100%;
 }
 main, header,footer{
-  padding-top: 1%;
+  padding-top: 15px;
   width: 100%;
   border-bottom: 1px solid #e6e3dc;
 }
@@ -60,7 +60,7 @@ main{
 nav{
   display: block;
   min-width: 660px;
-  margin-left: 30%;
+  margin-left: 38%;
 }
 
 .list_left nav{
@@ -78,7 +78,7 @@ nav ul li{
 nav ul li a{
   display: block;
   font-size: 14px;
-  padding: 0 0 1em 0;
+  padding: 0 0 17px 0;
   font-weight: 600;
   color: #120504;
   min-width: 4em;
